# nonebot_plugin_acm_reminder

./: .gitignore  README.md  __init__.py  config.py  data_source.py  http_request.py  pyproject.toml  read.html  readme  test.py
.github/workflows/: python-package.yml  python-publish.yml
nonebot_plugin_acm_reminder/: __init__.py  config.py  data_source.py
